
syntax = "proto3";

package file;

service File {
    rpc List(ListRequest) returns (ListResponse);
    rpc UploadFile(UploadFileRequest) returns (UploadFileResponse);
    rpc DownloadFile(DownloadFileRequest) returns (DownloadFileResponse);
    rpc DeleteFile(DeleteFileRequest) returns (DeleteFileResponse);
}

message ListRequest {}

message ListResponse {}

message UploadFileRequest {}

message UploadFileResponse {}

message DownloadFileRequest {}

message DownloadFileResponse {}

message DeleteFileRequest {}

message DeleteFileResponse {}